2002-03-26  Phil Krylov  <likewolf@users.sourceforge.net>

	* include/richedit.h (EM_GETSCROLLPOS, EM_SETSCROLLPSPOS):
	Add defines.

2002-03-14  Gunnar Degnbol <gdegnbol@users.sourceforge.net>

	* include/richedit.h (RICHEDIT_CLASS): UNICODE it.
	* include/shlobj.h (IContextMenu2): Put methods in right order.
	* include/basetyps.h (REFGUID, REFIID, REFCLSID): Check for
	CINTERFACE before defining.

2002-03-09  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/accctrl.h: Add #pragma GCC system_header
	if __GNUC__ >= 3.
	* include/aclapi.h: Same.
	* include/basetsd.h: Same.
	* include/basetyps.h: Same.
	* include/cderr.h: Same.
	* include/cguid.h: Same.
	* include/commctrl.h: Same.
	* include/commdlg.h: Same.
	* include/cpl.h: Same.
	* include/cplext.h: Same.
	* include/custcntl.h: Same.
	* include/dbt.h: Same.
	* include/dde.h: Same.
	* include/ddeml.h: Same.
	* include/dlgs.h: Same.
	* include/excpt.h: Same.
	* include/httpext.h: Same.
	* include/imagehlp.h: Same.
	* include/imm.h: Same.
	* include/initguid.h: Same.
	* include/intshcut.h: Same.
	* include/ipexport.h: Same.
	* include/iphlpapi.h: Same.
	* include/ipifcons.h: Same.
	* include/iprtrmib.h: Same.
	* include/iptypes.h: Same.
	* include/isguids.h: Same.
	* include/largeint.h: Same.
	* include/lm.h: Same.
	* include/lmaccess.h: Same.
	* include/lmalert.h: Same.
	* include/lmapibuf.h: Same.
	* include/lmat.h: Same.
	* include/lmaudit.h: Same.
	* include/lmbrowsr.h: Same.
	* include/lmchdev.h: Same.
	* include/lmconfig.h: Same.
	* include/lmcons.h: Same.
	* include/lmerr.h: Same.
	* include/lmerrlog.h: Same.
	* include/lmmsg.h: Same.
	* include/lmremutl.h: Same.
	* include/lmrepl.h: Same.
	* include/lmserver.h: Same.
	* include/lmshare.h: Same.
	* include/lmsname.h: Same.
	* include/lmstats.h: Same.
	* include/lmsvc.h: Same.
	* include/lmuse.h: Same.
	* include/lmuseflg.h: Same.
	* include/lmwksta.h: Same.
	* include/lzexpand.h: Same.
	* include/mapi.h: Same.
	* include/mciavi.h: Same.