@@ -139,8 +139,9 @@ extern "C" {
 #define EM_GETUNDONAME	(WM_USER+86)
 #define EM_GETREDONAME	(WM_USER+87)
 #define EM_STOPGROUPTYPING	(WM_USER+88)
-#define EM_GETTEXTLENGTHEX	(WM_USER+95)
 #define EM_AUTOURLDETECT	(WM_USER+91)
+#define EM_GETTEXTLENGTHEX	(WM_USER+95)
+#define EM_SHOWSCROLLBAR	(WM_USER+96)
 #define EM_SETLANGOPTIONS	(WM_USER+120)
 #define EM_GETLANGOPTIONS	(WM_USER+121)
 #define EM_GETIMECOMPMODE	(WM_USER+122)
